# oqaml

./: .gitignore  .merlin  Dockerfile  LICENSE  Makefile  README.md  _oasis  jbuild-workspace  oqam.ml  oqam.mli  oqaml.install  oqaml.opam  oqamldoc.odocl  semaphore_test.sh
docs/: oqaml_setup.md
readmes/: oqaml_setup.md  walkthrough.md  walkthrough2tex.md
src/: .#oqaml.ml  META  jbuild  oqam.ml  oqam.mli  oqaml.ml  oqaml.mli  owl.mllib  primitives.ml  primitives.mli  utils.ml  utils.mli
tests/: jbuild  test_runner.ml  unit_oqam.ml  unit_oqaml.ml
