opam-version: "1.2"
maintainer: "softapps@rigetti.com"
authors: ["Rigetti Computing, Inc. <softapps@rigetti.com>"]
homepage: "https://github.com/rigetticomputing/oqaml"
bug-reports: "https://github.com/rigetticomputing/oqaml/issues"
dev-repo: "git+https://github.com/rigetticomputing/oqaml.git"
license: "Apache-2.0"

name: "oqaml"
version: "0.0.1"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "core_extended"
  "owl"
  "jbuilder"
]

available: [ ocaml-version >= "4.04" ]
descr: "
OQaml is a reference implementation of the Quil Language in OCaml
"
